# vibe64

./: .gitignore  AGENTS.md  Cargo.toml  Makefile  README.md
crates/n64-core/: Cargo.toml
crates/n64-core/src/: debug.rs  lib.rs  n64.rs  savestate.rs
crates/n64-core/src/bus/: map.rs  mod.rs
crates/n64-core/src/cart/: cic.rs  mod.rs  rom.rs
crates/n64-core/src/cpu/: cop0.rs  cop1.rs  exceptions.rs  execute.rs  instruction.rs  mod.rs  tlb.rs  vr4300.rs
crates/n64-core/src/jit/: dynarec.rs  mod.rs
crates/n64-core/src/memory/: mod.rs  pif.rs  rdram.rs
crates/n64-core/src/rcp/: ai.rs  audio_hle.rs  flashram.rs  gbi.rs  mi.rs  mod.rs  pi.rs  rdp.rs  renderer.rs  ri.rs  rsp.rs  si.rs  vi.rs
crates/n64-dynarec/: Cargo.toml
crates/n64-dynarec/src/: lib.rs
crates/n64-frontend/: Cargo.toml
crates/n64-frontend-common/: Cargo.toml
crates/n64-frontend-common/src/: audio.rs  blit.rs  debug_overlay.rs  gamepad.rs  lib.rs
crates/n64-frontend/src/: audio.rs  debug_overlay.rs  gamepad.rs  main.rs  replay.rs  tui.rs
crates/n64-gui/: Cargo.toml
crates/n64-gui/src/: app.rs  config.rs  main.rs
doc/: dynarec.md  dynarec_perf_backlog.md  memory_map.md  mips_iii_instructions.md  n64_architecture.md  rendering.md
docs/: gauntlet-legends-debugging.md
